# Pi_Pico_Battleships

./: .gitignore  LICENSE  README.md  main.c
Client/: CMakeLists.txt  main.c  terminal.h
Client/Battleship/: battleship.c  battleship.h  battleship_gameLoop.c
Client/UDP/: udp.c  udp.h
Server/: CMakeLists.txt  main.c
Server/WiFi/: dhcpServer.c  dhcpServer.h  wifi.c  wifi.h
Server/gameServer/: gameServer.c  gameServer.h
Utility/: PASS.h  defines.h  enums.h  structs.h  utility.h
WIFI/: dhcpServer.c  dhcpServer.h  wifi.c  wifi.h
gameServer/: gameServer.c  gameServer.h
