cmake_minimum_required(VERSION 3.25)

# Select board:
set(PICO_BOARD pico2_w)

include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
include($ENV{PICO_SDK_PATH}/tools/CMakeLists.txt)

project(main C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

# Uncomment to set different
# add_compile_definitions(SYS_CLK_MHZ=200)


add_executable(${PROJECT_NAME}
    main.c
    gameServer/gameServer.c
    WiFi/dhcpServer.c
    WiFi/wifi.c
)

include_directories(${PROJECT_NAME}
    .
    gameServer
    WiFi
    ../Utility
)

# pico_generate_pio_header(${PROJECT_NAME}
# )

pico_add_extra_outputs(${PROJECT_NAME})


target_link_libraries(${PROJECT_NAME}
    pico_stdlib
    hardware_gpio
    pico_cyw43_arch_lwip_threadsafe_background
)

pico_enable_stdio_usb(${PROJECT_NAME}  1)
pico_enable_stdio_uart(${PROJECT_NAME} 1)
